:sparkles: scan the QR code to log in on the WeChat public account
